--- a/distance_cal.html
+++ b/distance_cal.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <title>Distance Calculator</title>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" id="theme-styles">
 
   <style>
     body {
@@ -77,7 +78,8 @@
   <div id="result" style="margin-top: 20px; height: 35px; background-color: lightblue"></div>
 </div>
 
-
 <script src="distance_cal.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
